// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`No Title 1`] = `
<section
  class="pane s-j2LTsWktqK_4"
  style="--bg: var(--base-lightest);"
>
   
</section>
`;

exports[`With Title 1`] = `
<section
  class="pane s-j2LTsWktqK_4"
  style="--bg: var(--base-lightest);"
>
  <h2
    class="s-j2LTsWktqK_4"
  >
    Hello world!
  </h2>
  
   
</section>
`;
